Shang New Live/src/objects/Invoice__c.object
<CustomObject>
    <fields>
        <fullName>Account_Id__c</fullName>
        <formula>Rent_Roll__r.Property__r.Landlord__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <formula>IF(Lease__r.Tenant__r.Name &lt;&gt; null, Lease__r.Tenant__r.Name,Tenant_Name__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AmountRollupForeign__c</fullName>
        <label>AmountRollupForeign</label>
        <summarizedField>Invoice_Line_Item__c.Amount_Foreign__c</summarizedField>
        <summaryFilterItems>
            <field>Invoice_Line_Item__c.Withholding_Tax__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Invoice_Line_Item__c.Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AmountRollupLocal__c</fullName>
        <label>AmountRollupLocal</label>
        <summarizedField>Invoice_Line_Item__c.Amount_Local__c</summarizedField>
        <summaryFilterItems>
            <field>Invoice_Line_Item__c.Withholding_Tax__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Invoice_Line_Item__c.Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Amount_Foreign__c</fullName>
        <label>Amount (Foreign)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount_Local__c</fullName>
        <label>Amount (Local)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount_Paid_Foreign__c</fullName>
        <label>Amount Paid (Foreign)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount_Paid_Local__c</fullName>
        <label>Amount Paid (Local)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount_Paid__c</fullName>
        <description>Managed by Trigger</description>
        <inlineHelpText>Roll-Up from related Cash Details</inlineHelpText>
        <label>Amount Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <inlineHelpText>Roll-up of Amount from related Invoice Line Item</inlineHelpText>
        <label>Amount</label>
        <summarizedField>Invoice_Line_Item__c.Amount__c</summarizedField>
        <summaryForeignKey>Invoice_Line_Item__c.Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Approved_Amount__c</fullName>
        <label>Last Approved Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Barcode__c</fullName>
        <formula>IMAGE(&quot;//www.barcodesinc.com/generator_files/image.php?code=&quot;+    Name    +&quot;&amp;style=324&amp;type=C128B&amp;width=200&amp;height=50&amp;xres=1&amp;font=3&quot;,&quot;&quot;,35, 140)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Barcode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Email__c</fullName>
        <label>Billing Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Billing_Type__c</fullName>
        <formula>IF (NOT (ISBLANK( Rent_Roll__c )), 
TEXT( Rent_Roll__r.Billing_Type__c ),
&quot;Miscellaneous&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>From related Rent Roll</inlineHelpText>
        <label>Billing Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charge_Method__c</fullName>
        <label>Charge Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Charge_Method</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comm_Tax_Amount_Foreign__c</fullName>
        <label>Comm Tax Amount (Foreign)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comm_Tax_Amount_Local__c</fullName>
        <label>Comm Tax Amount (Local)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comm_Tax_Amount__c</fullName>
        <inlineHelpText>Roll-Up of Comm Tax Amount from related Invoice Line Item</inlineHelpText>
        <label>Comm Tax Amount</label>
        <summarizedField>Invoice_Line_Item__c.Comm_Tax_Amount__c</summarizedField>
        <summaryForeignKey>Invoice_Line_Item__c.Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Currency_Code__c</fullName>
        <label>Currency Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Currency_Code</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current__c</fullName>
        <description>This field is used in Debtor&apos;s Report</description>
        <formula>IF ( Invoice_Due_Age__c &lt; 31 , Outstanding_Amount_Local__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Exchange_Rate__c</fullName>
        <label>Exchange Rate</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Foreign_Exchange_Rate__c</fullName>
        <label>Foreign Exchange Rate</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoice_Auto__c</fullName>
        <displayFormat>{00000000}</displayFormat>
        <label>Invoice Auto</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Invoice_Code_without__c</fullName>
        <description>This field is referred in the Apex Code</description>
        <formula>SUBSTITUTE(Name, &quot;-&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field is referred in the Backend</inlineHelpText>
        <label>FM Invoice No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Due_Age__c</fullName>
        <description>Shows Age only if Outstanding is Due
Used in reports</description>
        <formula>IF (
 Outstanding_Amount__c &gt; 0 &amp;&amp; Payment_Due_Date__c &lt; Today (), 
 Today () - Payment_Due_Date__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Due (Age)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoice_Emailed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This indicates if the Invoice has been Emailed</inlineHelpText>
        <label>Invoice Emailed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice_Generated__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This indicates if the Invoice has been generated</inlineHelpText>
        <label>Invoice Generated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice_Index__c</fullName>
        <label>Invoice Index</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Printed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This indicates if the Invoice has been Printed</inlineHelpText>
        <label>Invoice Printed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice_Scan_Number__c</fullName>
        <description>This is used to concatenate 7 characters from left and 6 characters from right for Invoice Scanning. As scanner accepts max 15 characters</description>
        <formula>LEFT(Name, 7)  &amp; RIGHT(Name, 6)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Scan Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Type__c</fullName>
        <label>Invoice Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adhoc Credit Note</fullName>
                </value>
                <value>
                    <fullName>Adhoc Deposit</fullName>
                </value>
                <value>
                    <fullName>Adhoc Invoice</fullName>
                </value>
                <value>
                    <fullName>System Generated Advance Rental</fullName>
                </value>
                <value>
                    <fullName>System Generated Deposit</fullName>
                </value>
                <value>
                    <fullName>System Generated Invoice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JV_Status__c</fullName>
        <description>Journal Voucher - Used in Void Validation</description>
        <label>JV Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Generated</fullName>
                </value>
                <value>
                    <fullName>Posted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JV_Type__c</fullName>
        <formula>IF ( CASE (Billing_Type__c,
	   &quot;Late Charge&quot;, &quot;1&quot;,
           &quot;Ad-Hoc Invoice&quot;, &quot;1&quot;,
           &quot;Monthly&quot;, &quot;1&quot;,
           &quot;Miscellaneous&quot;, &quot;1&quot;,
&quot;GTO Rent&quot;,&quot;1&quot;,
           &quot;Debit Note&quot;,&quot;1&quot;,
           &quot;0&quot; ) == &quot;1&quot; , &quot;Invoice (Normal)&quot;, 
IF(Billing_Type__c == &quot;Credit Note&quot;, &quot;Credit Note&quot;, 
   IF(Billing_Type__c == &quot;Late Payment&quot;, &quot;Late Payment&quot;, 
    IF(Billing_Type__c == &quot;Rent&quot;, &quot;Invoice (Advance Rental)&quot;, &quot;&quot;) )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is used for Journal Voucher process. Used to sync/integrate data with JE Logic and configuration objects.</inlineHelpText>
        <label>JV Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Payment_Date__c</fullName>
        <description>Created to update Last Payment Date for &apos;Late Charge&apos; invoices Creation. As in this even, system would not calculate Late Payment Interest from Day 1.</description>
        <label>Last Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Late_Charge_Applicable__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This is checked by Default for all Invoices
Late Charge Invoices will have this field as unchecked</description>
        <inlineHelpText>This is checked by Default for all Invoices (since all Invoices are applicable for Late Charge, provided there&apos;s a delay in payment)
Late Charge Invoices will have this field as &apos;unchecked&apos;</inlineHelpText>
        <label>Late Charge Applicable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Late_Charge_Days__c</fullName>
        <formula>IF(NOT(ISBlank(Last_Payment_Date__c)), 
IF((Last_Payment_Date__c - Payment_Due_Date__c) &gt; 0,(Last_Payment_Date__c - Payment_Due_Date__c),0) 
,IF((TODAY() - Payment_Due_Date__c) &gt; 0,(TODAY() - Payment_Due_Date__c),0) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Late Charge Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lease__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lease</label>
        <referenceTo>Lease__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Net_Total__c</fullName>
        <formula>Total_Amount__c  -  Withholding_Tax_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Amount - Withholding Tax Amount</inlineHelpText>
        <label>Net Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Outstanding_Amount_Foreign__c</fullName>
        <label>Outstanding Amount (Foreign)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Outstanding_Amount_Local__c</fullName>
        <label>Outstanding Amount (Local)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Outstanding_Amount__c</fullName>
        <formula>Total_Amount__c -  Amount_Paid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Amount - Amount Paid</inlineHelpText>
        <label>Outstanding Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Parent_Company__c</fullName>
        <formula>IF(Lease__r.Tenant__r.Name &lt;&gt; null, if( Lease__r.Tenant__r.Parent.Name &lt;&gt; null ,Lease__r.Tenant__r.Parent.Name , Lease__r.Tenant__r.Name ) , if( Tenant_Name__r.Parent.Name &lt;&gt; null ,Tenant_Name__r.Parent.Name , Tenant_Name__r.Name ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Due_Date__c</fullName>
        <defaultValue>$System.OriginDateTime  + 30</defaultValue>
        <label>Payment Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Price_Factor__c</fullName>
        <description>Created to cater CL process
Managed by Invoice creation trigger</description>
        <inlineHelpText>Used for CL Process
To be referred in PDF</inlineHelpText>
        <label>Price Factor</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Property_Name_Text__c</fullName>
        <description>This field is populated by W/F rule</description>
        <inlineHelpText>This field is populated by W/F rule</inlineHelpText>
        <label>Property Name Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Created this field to manage Misc Invoice Process - to generate PDF</inlineHelpText>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property_Short_Code__c</fullName>
        <formula>IF(ISBLANK(Lease__r.Property__r.Short_Code__c ),  Property_Name__r.Short_Code__c ,Lease__r.Property__r.Short_Code__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property Short Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <formula>CASESAFEID(Lease__r.Property__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>from related Lease.
Used in Cash Receipt Interface</inlineHelpText>
        <label>Property ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refund_Currency_Code__c</fullName>
        <label>Last Refund Currency Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MMK</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Refund_Mode__c</fullName>
        <label>Last Refund Mode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Payment_Mode</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Refund_Status__c</fullName>
        <label>Last Refund Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Refund_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Remaining_Amount__c</fullName>
        <formula>IF( TEXT(Refund_Status__c) = &quot;&quot;,  

-( Outstanding_Amount_Local__c -  (Total_Refunded_Amount__c + Requested_Amount__c)),
-( Outstanding_Amount_Local__c -  Total_Refunded_Amount__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rent_Roll__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rent Roll</label>
        <referenceTo>Rent_Roll__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requested_Amount__c</fullName>
        <label>Last Requested Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Outstanding</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Partially Paid</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TaxAmountRollupForeign__c</fullName>
        <label>TaxAmountRollupForeign</label>
        <summarizedField>Invoice_Line_Item__c.Comm_Tax_Amount_Foreign__c</summarizedField>
        <summaryFilterItems>
            <field>Invoice_Line_Item__c.Withholding_Tax__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Invoice_Line_Item__c.Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TaxAmountRollupLocal__c</fullName>
        <label>TaxAmountRollupLocal</label>
        <summarizedField>Invoice_Line_Item__c.Comm_Tax_Amount_Local__c</summarizedField>
        <summaryFilterItems>
            <field>Invoice_Line_Item__c.Withholding_Tax__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Invoice_Line_Item__c.Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Tenant_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tenant</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tenant_Type__c</fullName>
        <description>Global Picklist
Used for CL Process</description>
        <inlineHelpText>Used for CL Process
To be referred in PDF</inlineHelpText>
        <label>Tenant Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Tenant_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tenant__c</fullName>
        <formula>CASESAFEID(Lease__r.Tenant__c)</formula>
        <inlineHelpText>from related Lease.
Used in Cash Receipt Interface</inlineHelpText>
        <label>Tenant ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalAmountRollupForeign__c</fullName>
        <label>TotalAmountRollupForeign</label>
        <summarizedField>Invoice_Line_Item__c.Total_Amount_Foreign__c</summarizedField>
        <summaryFilterItems>
            <field>Invoice_Line_Item__c.Withholding_Tax__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Invoice_Line_Item__c.Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalAmountRollupLocal__c</fullName>
        <label>TotalAmountRollupLocal</label>
        <summarizedField>Invoice_Line_Item__c.Total_Amount_Local__c</summarizedField>
        <summaryFilterItems>
            <field>Invoice_Line_Item__c.Withholding_Tax__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Invoice_Line_Item__c.Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Amount_Foreign__c</fullName>
        <label>Total Amount (Foreign)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Amount_Local__c</fullName>
        <label>Total Amount (Local)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <label>Total Amount</label>
        <summarizedField>Invoice_Line_Item__c.Total_Amount__c</summarizedField>
        <summaryForeignKey>Invoice_Line_Item__c.Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Refunded_Amount__c</fullName>
        <inlineHelpText>Rollup of Refunded Amount on PV</inlineHelpText>
        <label>Total Refunded Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Requested_Amount__c</fullName>
        <inlineHelpText>Rollup of Amount on PV (Unvoided)</inlineHelpText>
        <label>Total Requested Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Void_Datetime__c</fullName>
        <label>Void Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Void_Reason__c</fullName>
        <label>Void Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Voided__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Voided</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Withholding_Tax_Amount__c</fullName>
        <inlineHelpText>Applicable for Casual Leasing Invoices only.</inlineHelpText>
        <label>Withholding Tax Amount</label>
        <summarizedField>Invoice_Line_Item__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Invoice_Line_Item__c.Withholding_Tax__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Invoice_Line_Item__c.Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>X31_60_days__c</fullName>
        <formula>IF ( Invoice_Due_Age__c &gt;= 31 &amp;&amp; Invoice_Due_Age__c &lt;=60 ,  Outstanding_Amount_Local__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>31 - 60 days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X61_90_days__c</fullName>
        <description>Created for reporting purpose</description>
        <formula>IF ( Invoice_Due_Age__c &gt;= 61 &amp;&amp; Invoice_Due_Age__c &lt;=90 ,  Outstanding_Amount_Local__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>61 - 90 days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X90_days__c</fullName>
        <description>Created for Debtor&apos;s Reporting</description>
        <formula>IF ( Invoice_Due_Age__c &gt;= 91 ,  Outstanding_Amount_Local__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>&gt; 90 days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Invoice</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Billing_Type__c</columns>
        <columns>Amount__c</columns>
        <columns>Outstanding_Amount__c</columns>
        <columns>Invoice_Date__c</columns>
        <columns>Payment_Due_Date__c</columns>
        <columns>Lease__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Current_Month_Invoice</fullName>
        <booleanFilter>(1 OR 2) AND 3</booleanFilter>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Billing_Type__c</columns>
        <columns>Amount__c</columns>
        <columns>Outstanding_Amount__c</columns>
        <columns>Status__c</columns>
        <columns>Invoice_Date__c</columns>
        <columns>Payment_Due_Date__c</columns>
        <columns>Lease__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Invoice_Date__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <filters>
            <field>Property_Short_Code__c</field>
            <operation>equals</operation>
            <value>JMT</value>
        </filters>
        <label>Current Month Invoice</label>
    </listViews>
    <listViews>
        <fullName>JC_Invoices</fullName>
        <columns>NAME</columns>
        <columns>Currency_Code__c</columns>
        <columns>Account__c</columns>
        <columns>Billing_Type__c</columns>
        <columns>Amount__c</columns>
        <columns>Comm_Tax_Amount__c</columns>
        <columns>Outstanding_Amount__c</columns>
        <columns>Invoice_Date__c</columns>
        <columns>Payment_Due_Date__c</columns>
        <columns>Voided__c</columns>
        <columns>Status__c</columns>
        <columns>Lease__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Property_Short_Code__c</field>
            <operation>equals</operation>
            <value>JC</value>
        </filters>
        <label>JC - Invoices</label>
    </listViews>
    <listViews>
        <fullName>JMT_Invoices</fullName>
        <columns>NAME</columns>
        <columns>Currency_Code__c</columns>
        <columns>Account__c</columns>
        <columns>Billing_Type__c</columns>
        <columns>Amount__c</columns>
        <columns>Comm_Tax_Amount__c</columns>
        <columns>Outstanding_Amount__c</columns>
        <columns>Status__c</columns>
        <columns>Voided__c</columns>
        <columns>Invoice_Date__c</columns>
        <columns>Payment_Due_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Lease__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Property_Short_Code__c</field>
            <operation>equals</operation>
            <value>JMT</value>
        </filters>
        <label>JMT - Invoices</label>
    </listViews>
    <listViews>
        <fullName>Today_s_Invoices</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Billing_Type__c</columns>
        <columns>Amount__c</columns>
        <columns>Outstanding_Amount__c</columns>
        <columns>Payment_Due_Date__c</columns>
        <columns>Invoice_Date__c</columns>
        <columns>Lease__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Invoices</label>
    </listViews>
    <nameField>
        <label>Invoice Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoices</pluralLabel>
    <recordTypes>
        <fullName>Foreign</fullName>
        <active>true</active>
        <label>Foreign</label>
    </recordTypes>
    <recordTypes>
        <fullName>Local</fullName>
        <active>true</active>
        <label>Local</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>